// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div>
          <div
            class="uv_a0dfak0 uv_a0dfak1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_a0dfak4"
            >
              <input
                class="uv_a0dfak6"
                data-size="large"
                id="_r_0_"
                name="test"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should render correctly with regex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_4_"
        >
          Test
        </label>
        <div>
          <div
            class="uv_a0dfak0 uv_a0dfak1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_a0dfak4"
            >
              <div
                class="uv_x6xm4t2 uv_x6xm4t0 uv_mxir930 uv_mxir932j"
                style="--uv_1o893js0: fit-content; --uv_1o893js1: 100%;"
              >
                <span
                  class="uv_x6xm4t5 uv_x6xm4t6 uv_x6xm4tc uv_x6xm4ti uv_x6xm4t9"
                >
                  <span
                    class="uv_x6xm4t14 uv_1yhcak80 uv_1yhcak83 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832 uv_1yhcak83e"
                  >
                    4
                  </span>
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_x6xm4t6 uv_x6xm4tc uv_x6xm4th uv_x6xm4tz"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CloseIcon
                    </title>
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="uv_a0dfak6"
                data-size="large"
                id="_r_4_"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="uv_a0dfak5"
            >
              <button
                aria-label="clear value"
                class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mh uv_1x0t66mj uv_1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_i_"
        >
          Test
        </label>
        <div>
          <div
            class="uv_a0dfak0 uv_a0dfak1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
            tabindex="0"
          >
            <div
              class="uv_a0dfak4"
            >
              <div
                class="uv_x6xm4t2 uv_x6xm4t0 uv_mxir930 uv_mxir932j"
                style="--uv_1o893js0: fit-content; --uv_1o893js1: 100%;"
              >
                <span
                  class="uv_x6xm4t5 uv_x6xm4t6 uv_x6xm4tc uv_x6xm4ti uv_x6xm4t9"
                >
                  <span
                    class="uv_x6xm4t14 uv_1yhcak80 uv_1yhcak83 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832 uv_1yhcak83e"
                  >
                    First
                  </span>
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_x6xm4t6 uv_x6xm4tc uv_x6xm4th uv_x6xm4tz"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CloseIcon
                    </title>
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="uv_a0dfak6"
                data-size="large"
                id="_r_i_"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="uv_a0dfak5"
            >
              <button
                aria-label="clear value"
                class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mh uv_1x0t66mj uv_1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
